[package]
name = "mega_api"
version = "0.1.1"
description = "Mega.nz api"
keywords = ["mega", "data", "api"]
categories = ["api-bindings","web-programming"]
readme = "README.md"
authors = ["sero01000"]
edition = "2018"
repository = "https://github.com/sero01000/mega"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
rand="0.8.4"
aes="0.7.4"
block-modes="0.8.1"
base64="0.13.0"
ring="0.16.20"
